Estilização do projeto e Responsividade

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 </head>
 <body>
     <div class="container">
-        <h2>Simples Editor de Imagens</h2>
+        <h2>Editor de Imagens</h2>
         <div class="wrapper">
             <div class="editor-panel">
                 <div class="filter">
                     <label class="title">Filtros</label>
                     <div class="options">
-                        <button>Brilho</button>
+                        <button class="active">Brilho</button>
                         <button>Saturação</button>
                         <button>Inversão</button>
                         <button>Escala de Cinza</button>
